discussion/kv_engine/174467/174467_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[BP] MB-51413: Create MockCouchKVStore in replaceCouchKVStore

It's test code so the greater flexibility is useful.

Change-Id: I974a864fce66007a6f1aa3aef517997a72568bd6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-04 14:23:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-04 14:23:49.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/297555/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-04 16:52:05.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/147/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/147/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/147/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/181/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16243/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/145/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/148/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/149/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/153/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/140/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/145/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/151/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/149/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-05 12:20:28.000000000
Message: 
Patch Set 1:

(1 comment)
File Comment: /PATCHSET_LEVEL -> clang tidy known issue, overriding
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-05 12:20:29.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-05 12:20:30.000000000
Message: 
Removed Code-Review-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-05-05 12:45:18.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-05-05 13:14:56.000000000
Message: 
Patch Set 1: Verified+1

(1 comment)
File Comment: /PATCHSET_LEVEL -> clang tidy issue is existing issue
----------------------------------------------------------------------------------------------------------------------
